--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,12 +25,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="3dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Space
             android:layout_width="66dp"
-            android:layout_height="match_parent"
+            android:layout_height="68dp"
             android:layout_weight="1" />
 
         <TextView
@@ -60,6 +61,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Space
@@ -72,7 +74,7 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Car"
+            android:text="@string/car"
             android:textSize="30sp" />
 
         <Space
@@ -93,24 +95,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="61dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/NumberLabel"
-            android:layout_width="0dp"
+            android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Number"
+            android:text="@string/Number"
             android:textSize="30sp" />
 
         <EditText
-            android:id="@+id/editText8"
+            android:id="@+id/editNumber"
             android:layout_width="12dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Car Number"
+            android:hint="@string/hintNumber"
             android:inputType="textPersonName"
             android:textSize="30sp" />
     </LinearLayout>
@@ -123,6 +126,7 @@
         android:id="@+id/saveSettingsButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="saveDriverDetails"
         android:text="Save" />
 
 </LinearLayout>
