added database with driver table, next is to define create/read/update methods for Settings

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -104,7 +104,7 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/Number"
+            android:text="@string/number"
             android:textSize="30sp" />
 
         <EditText
