--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/buttonTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="move to settings "
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="240dp" />
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/moveSettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="move to settings " />
+
+        <Button
+            android:id="@+id/moveLastParking"
+            android:layout_width="234dp"
+            android:layout_height="45dp"
+            android:text="Move to LastParking" />
+
+        <Button
+            android:id="@+id/moveToSaveLocation"
+            android:layout_width="251dp"
+            android:layout_height="49dp"
+            android:text="moveToSaveLocation" />
+    </LinearLayout>
+
+</LinearLayout>
