--- a/app/src/main/res/layout/activity_save_current_location.xml
+++ b/app/src/main/res/layout/activity_save_current_location.xml
@@ -38,6 +38,7 @@
         android:layout_height="match_parent">
 
         <WebView
+            android:id="@+id/webViewContact"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="55dp" />
