--- a/app/src/main/res/layout/activity_save_current_location.xml
+++ b/app/src/main/res/layout/activity_save_current_location.xml
@@ -29,6 +29,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="false"
+            android:onClick="updateCurrentLocation"
             android:text="@string/updateLocation" />
 
     </RelativeLayout>
