--- a/app/src/main/res/layout/activity_save_current_location.xml
+++ b/app/src/main/res/layout/activity_save_current_location.xml
@@ -19,6 +19,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:onClick="saveCurrentLocation"
             android:text="@string/save" />
 
         <Button
