--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,12 @@
             android:layout_width="279dp"
             android:layout_height="wrap_content"
             android:text="move to location history" />
+
+        <Button
+            android:id="@+id/parkingAroundMeButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="parking around me " />
     </LinearLayout>
 
 </LinearLayout>
