--- a/app/src/main/res/layout/activity_parking_around_me.xml
+++ b/app/src/main/res/layout/activity_parking_around_me.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".ParkingAroundMe">
 
-</android.support.constraint.ConstraintLayout>
+    <WebView
+        android:id="@+id/webViewParkingAroundMe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</RelativeLayout>
